--- a/fw/platformio.ini
+++ b/fw/platformio.ini
@@ -6,7 +6,7 @@
 ;
 
 [env:wt32-eth01]
-platform = espressif32
+platform = espressif32@5.3.0
 ; Koristimo specificnu plocu za WT32-ETH01
 board = wt32-eth01
 framework = arduino
@@ -24,13 +24,12 @@ build_flags = -I include
 ; Biblioteke koje su nam potrebne
 lib_deps =
     ; Mreza (ETH, WiFi, HTTP Server)
-    espressif/AsyncTCP@^1.1.1
-    me-no-dev/ESP Async WebServer@^1.2.3
-    espressif/ESPmDNS@^2.0.0
+    AsyncTCP@1.1.1
+    ESP Async WebServer@1.2.3
+    ESPmDNS                 ; Korigovano: Uklonjen problematični 'espressif/' prefiks
     tzapu/WiFiManager@^2.0.17-beta
     ; Vrijeme i Sunce (za Virtualnu Rasvjetu)
     buelowp/sunset@^1.1.7
     ; Drajveri za Skladistenje
-    Wire ; Ugradjena za I2C EEPROM
-    SPI  ; Ugradjena za SPI Flash
-    adafruit/Adafruit_SPIFlash@^4.3.0 ; Biblioteka za W25Qxx cipove
+    Wire ; Ugradjeni I2C
+    adafruit/Adafruit SPIFlash@^4.0.0 ; Za SpiFlashStorage
