--- a/fw/platformio.ini
+++ b/fw/platformio.ini
@@ -19,8 +19,11 @@ upload_protocol = esptool
 ; monitor_port = COM_X (zamijenite sa vasim portom)
 
 ; Build flags za ukljucivanje naseg 'include' direktorija
-build_flags = -I include -D DISABLE_FS_H_WARNING
-
+; build_flags = -I include -D DISABLE_FS_H_WARNING
+build_flags = 
+    -I $PROJECT_DIR/include
+    -D DISABLE_FS_H_WARNING
+    
 ; Biblioteke koje su nam potrebne
 lib_deps =
     ; Mreza (ETH, WiFi, HTTP Server)
