--- a/fw/platformio.ini
+++ b/fw/platformio.ini
@@ -1,5 +1,5 @@
 ;
-; PlatformIO Project Configuration File
+; PlatformIO Project Configuration File - UPDATED for uSD Card
 ;
 ; Molimo pogledajte dokumentaciju za opcije
 ; https://docs.platformio.org/page/projectconf.html
@@ -7,19 +7,14 @@
 
 [env:wt32-eth01]
 platform = espressif32@5.3.0
-; Koristimo specificnu plocu za WT32-ETH01
 board = wt32-eth01
 framework = arduino
 
 ; Postavke za Fazu 1 (Debug na Serial0)
 monitor_speed = 115200
 upload_protocol = esptool
-; Ako koristite ESProg za upload, zamijenite esptool sa esp-prog
-; upload_protocol = esp-prog
-; monitor_port = COM_X (zamijenite sa vasim portom)
 
 ; Build flags za ukljucivanje naseg 'include' direktorija
-; build_flags = -I include -D DISABLE_FS_H_WARNING
 build_flags = 
     -I $PROJECT_DIR/include
     -D DISABLE_FS_H_WARNING
@@ -29,10 +24,11 @@ lib_deps =
     ; Mreza (ETH, WiFi, HTTP Server)
     AsyncTCP@1.1.1
     ESP Async WebServer@1.2.3
-    ESPmDNS                 ; Korigovano: Uklonjen problematični 'espressif/' prefiks
+    ESPmDNS
     tzapu/WiFiManager@^2.0.17-beta
     ; Vrijeme i Sunce (za Virtualnu Rasvjetu)
     buelowp/sunset@^1.1.7
     ; Drajveri za Skladistenje
     Wire ; Ugradjeni I2C
-    adafruit/Adafruit SPIFlash@^4.0.0 ; Za SpiFlashStorage
+    ; SD and SPI are built-in to ESP32 Arduino Core - no external deps needed
+    ; REMOVED: adafruit/Adafruit SPIFlash (per Plan Rada section 1.1)
