--- a/fw/platformio.ini
+++ b/fw/platformio.ini
@@ -7,7 +7,7 @@
 
 [env:wt32-eth01]
 platform = espressif32@5.3.0
-board = wt32-eth01
+board = esp32dev
 framework = arduino
 
 ; Postavke za Fazu 1 (Debug na Serial0)
