prva radna verzija
živ je

--- a/fw/platformio.ini
+++ b/fw/platformio.ini
@@ -12,7 +12,9 @@ framework = arduino
 
 ; Postavke za Fazu 1 (Debug na Serial0)
 monitor_speed = 115200
+monitor_port = COM11
 upload_protocol = esptool
+upload_port = COM11
 
 ; Build flags za ukljucivanje naseg 'include' direktorija
 build_flags = 
